--- a/feudum/README.tex
+++ b/feudum/README.tex
@@ -1,8 +1,40 @@
-* Objetivo
+% Created 2019-10-03 Thu 23:08
+\documentclass[11pt]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{fixltx2e}
+\usepackage{graphicx}
+\usepackage{grffile}
+\usepackage{longtable}
+\usepackage{wrapfig}
+\usepackage{rotating}
+\usepackage[normalem]{ulem}
+\usepackage{amsmath}
+\usepackage{textcomp}
+\usepackage{amssymb}
+\usepackage{capt-of}
+\usepackage{hyperref}
+\author{Fabio Favero Henkes}
+\date{\today}
+\title{}
+\hypersetup{
+ pdfauthor={Fabio Favero Henkes},
+ pdftitle={},
+ pdfkeywords={},
+ pdfsubject={},
+ pdfcreator={Emacs 24.5.1 (Org mode 8.3.4)},
+ pdflang={English}}
+\begin{document}
+
+\tableofcontents
+
+\section{Objetivo}
+\label{sec:orgheadline1}
 
 O objetivo do jogo é tornar-se o mais venerável de todo o reino do rei Daniel.
 
-* Mapa
+\section{Mapa}
+\label{sec:orgheadline2}
 
 Dividido em 6 partes: mar (pequenas ilhas), grandes ilhas, floresta, deserto, terra desolada e montanhas. As seis localidades iniciais são circuladas em rosa.
 
@@ -15,42 +47,52 @@ Barris de vinho: na cor do jogador onde é possível armazenar enxofre para a fe
 
 Guildas: 6 guildas circundando o tabuleiro.
 
-[[./img/guilds.png]]
+\includegraphics[width=.9\linewidth]{./img/guilds.png}
 
 (As guildas relacionam-se umas com as outras conforme acima)
 
-* Saco de recursos
+\section{Saco de recursos}
+\label{sec:orgheadline3}
 
 Todos os recursos aleatórios do jogo são armazenados.
 
-* Área do jogador (tableau)
+\section{Área do jogador (tableau)}
+\label{sec:orgheadline4}
 
 Cada jogador recebe o mesmo set de componentes com uma pequena diferença de recursos.
 
-- 11 cartas de ação na cor do jogador
-- 3 peões de 6 lados na cor do jogador representando diferenetes personagens relacionados às guildas
-- 7 marcadores de influência na cor do jogador (mais podem ser conseguidos durante a partida)
-- 4 discos na cor do jogador (dois para uso de guardiões no jogo avançado, que possuem um desenho de ponto de vitória)
-- 7 xelins (dinheiro)
-- 7 recursos de comida
-- 3 recursos diferentes quaisquer a escolha do jogador
-- 1 token de sacola na cor do jogador
+\begin{itemize}
+\item 11 cartas de ação na cor do jogador
+\item 3 peões de 6 lados na cor do jogador representando diferenetes personagens relacionados às guildas
+\item 7 marcadores de influência na cor do jogador (mais podem ser conseguidos durante a partida)
+\item 4 discos na cor do jogador (dois para uso de guardiões no jogo avançado, que possuem um desenho de ponto de vitória)
+\item 7 xelins (dinheiro)
+\item 7 recursos de comida
+\item 3 recursos diferentes quaisquer a escolha do jogador
+\item 1 token de sacola na cor do jogador
+\end{itemize}
 
-* O jogo
+\section{O jogo}
+\label{sec:orgheadline5}
 
 O jogo é dividido em 5 épocas nas quais um número indeterminado de rounds pode ser jogado, as épocas avançam conforme os tiles de região são descobertos e ao atingir a 5 época o jogo acaba e são contados os pontos de vitória.
 
 
 Um round consiste em 5 passos ou fases:
 
-- 1) Selecionar 4 das 11 cartas disponíveis e executar suas ações em ordem de turno de jogadores;
-- 2) Alimentar os peões no tabuleiro (comida ou vinho)
-- 3) Rolar o dado de progresso, isso é feito pelo jogador inicial e indica qual tile de região deverá ser removido do jogo.
-- 4) Caso atingida a mudança de época o marcador de época é avançado e a pontuação da época executada.
+\begin{itemize}
+\item 1) Selecionar 4 das 11 cartas disponíveis e executar suas ações em ordem de turno de jogadores;
+\item 2) Alimentar os peões no tabuleiro (comida ou vinho)
+\item 3) Rolar o dado de progresso, isso é feito pelo jogador inicial e indica qual tile de região deverá ser removido do jogo.
+\item 4) Caso atingida a mudança de época o marcador de época é avançado e a pontuação da época executada.
+\end{itemize}
 O tabuleiro nesse caso é repopulado conforme descrito na mudança época no manual do jogo. Caso a 5 época tenha sido atingida, após a pontuação de época segue-se para a pontuação de final de jogo.
-- 5) Passar o marcador de primeiro jogador em sentido horário e o dado de progresso, caso a 5 época ainda não tenha sido atingida.
+\begin{itemize}
+\item 5) Passar o marcador de primeiro jogador em sentido horário e o dado de progresso, caso a 5 época ainda não tenha sido atingida.
+\end{itemize}
 
-* Ações do jogador
+\section{Ações do jogador}
+\label{sec:orgheadline7}
 
 Escolha 4 dentre as 11 cartas disponíveis para jogar no round.
 
@@ -58,35 +100,46 @@ Após a escolha das cartas o jogador inicial randomicamente escolhido começa.
 
 Alguns símbolos podem aparecer nas cartas
 
-[[./img/symbol.png]]
+\includegraphics[width=.9\linewidth]{./img/symbol.png}
 
-- Ação normal: qualquer jogador pode executar a ação normal descrita na seção superior da carta.
-- Ação extra: o jogador pode gastar um recurso de salitre para adicionar uma quinta carta a sua mão nesta rodada.
-- Ação sequencial: o jogador pode gastar um recurso de enxofre para jogar duas cartas em um único turno.
+\begin{itemize}
+\item Ação normal: qualquer jogador pode executar a ação normal descrita na seção superior da carta.
+\item Ação extra: o jogador pode gastar um recurso de salitre para adicionar uma quinta carta a sua mão nesta rodada.
+\item Ação sequencial: o jogador pode gastar um recurso de enxofre para jogar duas cartas em um único turno.
+\end{itemize}
 
 Caso o jogador assim escolha, poderá executar apenas uma das ações (extra ou sequencial) por rodada, colocando o recurso correspondente em seu token de sacola na sua área de jogador
 para demonstrar aos demais jogadores sua opção.
 Após a execução da ação o recurso deve ser descartado no saco de recursos.
 
-- Habilidade especial: A posse de determinado recurso, ou de um peão específico permite a utlização da habilidade especial.
+\begin{itemize}
+\item Habilidade especial: A posse de determinado recurso, ou de um peão específico permite a utlização da habilidade especial.
+\end{itemize}
 
 O jogador DEVE jogar ao menos uma carta por turno mas PODE DESISTIR da ação.
 
-** As 11 cartas de ação
+\subsection{As 11 cartas de ação}
+\label{sec:orgheadline6}
 
 
-*1) Ação migrar:* o jogador pode migrar um de seus peões para dentro ou fora do tabuleiro de jogo. Caso opte por migrar um peão para dentro do tabuleiro, deve pagar uma comida.
+\begin{itemize}
+\item 1) Ação migrar: o jogador pode migrar um de seus peões para dentro ou fora do tabuleiro de jogo. Caso opte por migrar um peão para dentro do tabuleiro, deve pagar uma comida.
+\end{itemize}
 O peão deve ser colocado ao lado de outro peão do jogador ou um de seus marcadores de influência, caso não possua nenhum peão no tabuleiro coloque o mesmo próximo a uma das localidades
 iniciais. Então escolha a face do peão que representa o personagem desejado (fazendeiro, mercador, alquimista, guerreiro, nobre ou monge).
 
-*1.1) Habilidade especial "Parente distante":* Caso já possua um peão no tabuleiro do tipo alquimista, o jogador pode escolher colocar o peão em alguma das localidades iniciais do jogo,
+\begin{itemize}
+\item 1.1) Habilidade especial "Parente distante": Caso já possua um peão no tabuleiro do tipo alquimista, o jogador pode escolher colocar o peão em alguma das localidades iniciais do jogo,
+\end{itemize}
 sem a necessidade de estar junto a outro de seus peões ou marcadores de influência.
 
 Obs: Ao colocar um peão de respectivo personagem no tabuleiro este irá fornecer ao jogador status na respectiva guilda. Verifique sua influência na guilda neste momento. Cada guilda possui critérios
 específicos para fornecer mais status aos jogadores (peões, feudums, postos avançados, etc). O jogador com mais influẽncia na guilda recebe o título de mestre e coloca seu marcador de influência
 no espaço de 5vps a ser ganho na virada de época, o segundo jogador recebe o título de oficial e coloca seu marcador no espaço de 3vps.
 
-*2) Ação mover:* sua permissão de movimento total é igual ao número de peões que possui no tabuleiro, estes movimentos podem ser divididos entre todos os peões. O jogador pode se deslocar
+\begin{itemize}
+\item 2) Ação mover: sua permissão de movimento total é igual ao número de peões que possui no tabuleiro, estes movimentos podem ser divididos entre todos os peões. O jogador pode se deslocar
+\end{itemize}
 por estradas ou rotas de embarcações especiais.
 
      Furtando recursos: ao final de sua ação de movimento se um de seus peões estiver ao lado de de localidades com recursos vc pode furtar 1 deles a sua escolha, vc não pode furtar
@@ -95,13 +148,14 @@ de um local que vc mesmo domine ou que possua um servo.
      Embarcações: se o jogador tiver uma embarcação poderá se deslocar pelas rotas especiais, sendo rota de submarino (bolhas), rota de navio (ondas) ou rota de voo (passáros). O jogador
 pode abandonar a embarcação e continuar o movimento pela estrada, mas a mesma poderá ser usada por qualquer um daqui pra frente. Embarcações podem ser adquiridas na guilda do alquimista.
 
-     Balsas: Caso o alquimista não possua mais embarcações para a venda, as balsas podem ser usadas mediante o pagamento de 2 xelins.
+Balsas: Caso o alquimista não possua mais embarcações para a venda, as balsas podem ser usadas mediante o pagamento de 2 xelins.
 
      Viagem épica: Caso vc jogue a ação mover por duas vezes com sucesso na rodada (vide carta de repetir) avance na trilha de viagem épica ao encontrar um espaço com ícone de carta
 compre 2 cartas de escritura real e fique com 1 devolvendo a outra para o fundo do baralho. A viagem é pontuada ao final do jogo sendo que o primeiro jogador na trilha pontua o maior
 valor da seção onde se encontra, caso empate ambos pontuam o maior valor. No final da trilha todos que lá chegarem pontuam 17pvs
 
-*2.1) Habilidade especial "boa sorte":* Caso o jogador possua um peão monge no tabuleiro este pode adicionar +1 ao seu movimento. Escolha um de seus peões monge para a habilidade.
+\begin{itemize}
+\item 2.1) Habilidade especial "boa sorte": Caso o jogador possua um peão monge no tabuleiro este pode adicionar +1 ao seu movimento. Escolha um de seus peões monge para a habilidade.
+\end{itemize}
 Qualquer peão independente do personagem pode ser movido.
-
-*3) Ação de Influência:*
+\end{document}
