[ADD] Actions from 8 to 10 also .tex updated.

--- a/feudum/README.org
+++ b/feudum/README.org
@@ -160,9 +160,7 @@ posto avançado + 1 recurso de madeira realiza o upgrade para uma fazenda.
 fazenda + 1 recurso de ferro realiza o upgrade para uma cidade, nesse caso todos os recursos residentes na fazenda são descartados para a sacola de recursos.
 cidade + 1 selo real realiza o upgrade para um feudum do tipo de sua escolha. Ao colocar o feudum no tabuleiro verifique o status da guilda correspondente.
 
-Obs: Ao realizar o upgrade para um feudum o jogador tornar-se-á o vassalo do mesmo e deve agora respeito ao rei Daniel que deve ser demonstrado pelo avanço na trilha militar.
-Para cada conquista realizada o jogador pode colocar um token na trilha com o desenho da catapulta e a cada conquista subsequente, caso falhe em uma conquista na época marcada para avaliação na trilha, subtraia o número de pvs
-indicados.
+Obs (trilha militar): Ao realizar o upgrade para um feudum o jogador tornar-se-á o vassalo do mesmo e deve agora respeito ao rei Daniel que deve ser demonstrado pelo avanço na trilha militar.
 
 Após o upgrade ser realizado, retire o tile de região (avanço de época) correspondente a época atual ou inferior e a região onde ocorrido e pontue de acordo, caso não exista um tile na região correspondente pegue o tile de qualquer região,
 porém não há pontuação nesse caso.
@@ -173,3 +171,26 @@ Os tiles de região (avanço de época) podem ser usados de duas formas diferent
 Apenas um terreno é permitido por localidade. *Importante:* jogue essa ação em detrimento da ação normal!
 Coloque 3 recursos no terreno de acordo com o tipo solicitado, a cada época subsequente, depois de pontuar, adicione mais três recursos, cada vez pode-se optar por coletar todos os recursos ou deixar que se acumulem,
 ao coletar os recursos deve-se pagar um para o soberano da localidade como tributo. Ao início de cada época pontue 2pv para cada um de seus terrenos vazios e 4pv para cada terreno com recursos.
+
+*9) Ação de conquista:* esta ação não pode ser repetida e nem pode ser a última ação do round. Caso o jogador tenha um peão na mesma localização do peão de outro jogador ou feudum. O jogador pode atacar com multiplos de
+seus peões, porem só pode mirar em um peão adversário por vez.
+Peões possuem +1 ataque +2 defesa, monstros possuem +1 ataque +1 defesa, feudums possuem +2 defesa em adição a isso um súdito contará +1 defesa e um servo contará +1 ataque. Ao atacar diretamente um peão valores de ataque e
+defesa de súditos e servos não contam, a luta é mano a mano entre peões. O jogador atacante pode adicionar um único recurso de salitre para aumentar o ataque do peão em +1. Caso o peão atacante seja da guilda dos guerreiros
+podem ser adicionados múltiplos salitres aumentando o ataque em +1 para cada salitre utilizado.
+Ao vencer um peão o atacante retira o peão do adversário do tabuleiro e recebe 2pv. No caso da conquista de um feudum todos os marcadores de influência (soberano e súdito), mas não o peão, são removidos e o feudum é rebaixado
+até o nível de um posto avançado. Caso haja um servo na localidade, este torna-se o soberano no poosto avançado. Cheque status na guilda correspondente neste momento.
+Empates vão para a defesa.
+
+Obs (trilha militar): Para cada conquista realizada o jogador pode colocar um token na trilha com o desenho da catapulta e a cada conquista subsequente, caso falhe em uma conquista na época marcada para avaliação na trilha,
+ subtraia o número de pvs indicados. Os pvs perdidos são cumulativos caso não haja discos na trilha para suprimi-los.
+
+*9.1) Habilidade especial "Esfomear o povo":* caso o jogador possua um peão de nobre em uma localidade com um súdito ou servo do oponente, um deles pode ser conquistado e devolvido para o seu dono. O jogador não ganhará pvs
+(pois este é um ato desprezível) mas deve adicionar um disco a trilha militar. Após resolver essa ação remova todas as contas de rosário dos frangos na fazenda. Esta ação deve ser executada em detrimento da ação normal.
+
+*10) Ação de defesa:* essa ação não pode ser repetida, e é a única ação que pode ser jogada fora do seu turno, esta ação dá +1 de defesa sobre qualquer ataque e ainda 1pv. Caso ninguém lhe ataque a carta pode ser jogada em seu
+turno para ganho do pv.
+
+*10.1) Habilidade especial "Imunidade real":* caso o jogador esteja sendo atacado por uma ação "Esfomear o povo" pode lançar mão dessa habilidade para tornar-se imune e ganhar um selo real. Coloque o selo sob o servo ou súdito
+que esteja sendo atacado e este estará imune enquanto o selo permanecer com ele. O selo pode ser retirado para ser utilizado em outra ação porém o servo ou súdito perderá assim a sua imunidade.
+
+*11) Ação da guilda:*
