--- a/feudum/README.org
+++ b/feudum/README.org
@@ -202,20 +202,65 @@ selos reais, contas de rosário, etc)
 
 *Guilda dos alquimistas:* embarcações podem ser compradas por 3 xelins (caso não haja embarcações balsas são liberadas para utilização no mapa).
 
-*Guilda dos guerreiros (cavaleiros):* uma linha completa de marcadores de influência pode ser comprada por 3 xelins. Caso seja comprado pelo menos 3 marcadores de influência é possível ter controle de um dos monstros, devolva
-2 marcadores de influência para o estoque e marque o ícone de monstro selecionado na guilda com outro marcador restante, este monstro ficará consigo até que seja eliminado em combate.
+*Guilda dos guerreiros (cavaleiros):* uma linha completa de marcadores de influência pode ser comprada por 3 xelins.
+Caso seja comprado pelo menos 3 marcadores de influência é possível ter controle de um dos monstros, devolva 2 marcadores de influência para o estoque e marque o ícone de monstro selecionado
+na guilda com outro marcador restante, este monstro ficará consigo até que seja eliminado em combate.
 Há dois tipos de monstros a serpente marinha e o gigante. A serpente marinha é limitada pelas rotas de navio e submarinos. O gigante é limitado pelas rotas de estradas e de máquinas voadoras.
+Monstros adicionam +1 ao seu movimento e podem usar armas assim como peões (escrituras do rei).
+Peões ficam imóveis até que matem o monstro em sua localidade ou utilize a ação de migrar para remover seu peão do tabuleiro.
+Monstros não precisam ser alimentados, não adicionam influência, e não utilizam veículos.
+Caso o monstro seja derrotado, devolva o mesmo para a guilda dos guerreiros e retorne seu marcador de influẽncia para seu estoque pessoal.
 
 *Guilda dos monges:* Uma cota de rosário por 3 xelins.
 
-A negociação sempre é feita da seguinte forma: 1 xelim para o mestre da guilda, 1 xelim para o oficial, 1 xelim para a bolsa do monge (caso compre de alguma guilda do lado oposto) ou na cesta do fazendeiro (caso compre de alguma
-guilda do lado oposto). O procedimento é repetido até o preço ser finalizado. Ex: Pagando 4 xelins para comprar um item do mercador, iriam 1 para o mestre, 1 para o oficial, 1 para a bolsa do monge e mais 1 para o mestre. Caso os
-membros estejam ausentes, o dinheiro vai para o estoque exceto a participação do monge e/ou fazendeiro.
+A negociação sempre é feita da seguinte forma: 1 xelim para o mestre da guilda, 1 xelim para o oficial, 1 xelim para a bolsa do monge (caso compre de alguma guilda do lado oposto)
+ou na cesta do fazendeiro (caso compre de alguma guilda do lado oposto).
+O procedimento é repetido até o preço ser finalizado. Ex: Pagando 4 xelins para comprar um item do mercador, iriam 1 para o mestre, 1 para o oficial, 1 para a bolsa do monge
+e mais 1 para o mestre. Caso os membros estejam ausentes, o dinheiro vai para o estoque exceto a participação do monge e/ou fazendeiro.
 
 Para a guilda dos fazendeiros, caso o jogador seja soberano em uma fazenda ele pode esvaziar a mesma, colocar estes recursos na guildae receber uma comida ou um xelim para cada recurso entregue. O máximo de recursos comportado
 pela guilda dos fazendeiros é de 10, caos esse número extrapole e hajam contas de rosário sobre os frangos, 4 desses recursos são então enviados para a guilda dos mercadores, caso falte espaço os restantes vão para a guilda
 do alquimista, todos os restantes são devolvidos para a sacola de recursos.
 
-Puxar: o oficial da guilda
+Empurrar: o mestre da guilda pode empurrar recursos de sua guilda para a guilda de sua direita, caso complete 1,2 ou 3 dos objetivos o jogador recebe respectivamente 4, 5 ou 6 pvs.
 
-Empurrar: o mestre da guilda
+Ex guilda dos fazendeiros: o objetivo é que  mestre preencha totalmente quaisquer das prateleiras na vertical ou horizontalmente (linhas ou colunas) do mercado na guilda dos mercadores,
+ele deve empurrar um máximo de 5 recursos para tentar atingir esses objetivos. Digamos que seja possível completar duas prateleiras, isso daria 5vps para o jogador.
+
+Puxar: o oficial da guilda pode puxar da guilda em sua esquerda recursos para sua própria guilda, da mesma forma que a ação de empurrar, recebendo 3 pvs pelo cumprimento de um único objetivo
+e recebendo 2 cartas de escrituras do rei, mantendo uma em sua mão e descartando a outra no final do baralho.
+
+Em adição a isso, toda vez que qualquer dessas ações for realizada (empurrar, puxar) é possível que o jogador adicione um guardião na guilda (disco na cor do jogador com símbolo de ponto de vitória)
+em ações futuras o jogador que tiver o guardião receberá 1pv extra ao executar a mesma.
+
+*11.1) Habilidade especial "Banquetes":* caso algum mestre de guilda ou oficial compartilha com o jogador uma localização e o jogador acha que este mestre ou oficial tem falhado em realizar
+seu trabalho (ações de empurrar/puxar) o jogador pode então organizar um banquete para o dito (mestre/oficial). Gaste um enxofre de seu barril de vinho e tome seu lugar como se fosse o dito
+(mestre/oficial) na guilda e execute a respectiva ação correspondente ao dito (mestre/oficial).
+* Alimentar os peões
+
+Gaste uma comida para cada peão no tabuleiro para alimentá-lo por essa rodada, ou um vinho (enxofre) de seu barril para mantê-lo sem fome por duas rodadas, caso opte por isso a defesa e
+ataque de seu peão será 0 até que passe o efeito da bebedeira, mantenha o cubo sobre seu peão.
+
+* Dado de progresso
+
+O jogador com o token de primeiro jogador rola o dado de progresso e remove o tile de região correspondente.
+
+* Avanço de época
+
+Caso atingido o critério para avanço de época, mova o marcador de época e execute a respectiva pontuação.
+
+Guildas pontuam 5pvs para o mestre, 3pvs para o oficial
+Terrenos com recursos marcam 4pvs, terrenos vazios marcam 2pvs
+Onde o jogador for soberano ou estiver como servo cuidando de um terreno pontua de acordo com o número de marcadores que tiver por região em uma escala de 1/3/5/9/11..pvs
+Verifique se a época exige que algum jogador esteja na trilha militar por ser vassalo de algum feudum e desconte o número de pvs caso necessário.
+Adicione 3 novos recursos aos terrenos.
+Adicione recursos aleatórios da sacola de recursos nas regiões de acordo com a época (veja no mapa na trilha de avanço de época).
+Caso seja a 3 época, repopule o tabuleiro de acordo com o setup inicial do jogo (recursos no mapa e guildas).
+
+* Primeiro jogador
+
+Caso a 5a época não tenha sido atingida, passe o marcador de jogador inicial e o dado de progresso para o próximo jogador em sentido horário, caso tenha sido atingida, siga para
+a pontuação de final de jogo.
+
+Adicione os pontos da viagem épica, 1pv para cada posto avançado, fazenda e cidade, 3 pvs para cada feudum, 3pvs para cada 3 localizações iguais (ex: 3 fazendas) com feudums contando como
+curingas, 3pvs para cada 3 xelins que o jogador possua e finalmente verifique as escrituras do rei que possuem selos reais e compute os pvs conseguidos por objetivos atingidos.
